# tg_video_id

./: .gitignore  Dockerfile  docker-compose.yml  get_video_id.py  main.py  models.py  my_account.session  pyproject.toml  session_name.session
migrations/: env.py
migrations/versions/: 6c380e952454_add_audio.py  88c7862d2ecc_add_video_table.py
settings/: conf.py  database.py
